Changed CSS to use backpack colours and added a "no style" example to ensure we're shipping something that works out of the box

--- a/packages/bpk-component-graphic-promotion/src/BpkGraphicPromo.module.scss
+++ b/packages/bpk-component-graphic-promotion/src/BpkGraphicPromo.module.scss
@@ -23,11 +23,11 @@
   max-width: 65.5rem;
   margin-right: auto;
   margin-left: auto;
+  background-color: $bpk-color-sky-blue;
   background-position: center;
   background-size: cover;
+  color: $bpk-color-white;
   box-shadow: none;
-  color: black;
-  background-color: white;
 
   @include breakpoint-landscape {
     pointer-events: none;
